separate api resources somewhat better
